Fix overflow

--- a/src/styles/inspect-variables.scss
+++ b/src/styles/inspect-variables.scss
@@ -47,6 +47,7 @@
 	.variable-list {
 		word-break: break-all;
 		overflow-y: auto;
+		overflow-x: hidden;
 		padding: 8px 8px 8px 12px;
 		line-height: 1.3;
 		font-size: var(--font-ui-smaller);
